--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,2 +1,24 @@
-<h1>Welcome to Home Page, {{name}}</h1>
-<h2>This is the full home page</h2>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+<div class="container">
+    <form action="">
+        <div class="mb-3">
+            <label for="searchMovie" class="form-label">
+                Search for Movie:
+            </label>
+            <input type="text" class="form-control" name="searchMovie"/>
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+    <p>Searching for {{searchTerm}}</p>
+        {% for movie in movies %}
+            <h2>{{movie.tittle}}</h2>
+            <h3>{{movie.description}}</h3>
+            <img src="{{movie.image.url}}">
+            {% if movie.url %}
+                <a href="{{movie.url}}">Movie Link</a>
+            {% endif %}
+        {% endfor %}
+    <br>
+</div>
